tests/baselines/reference/conflictingCommonJSES2015Exports.errors.txt
tests/cases/conformance/salsa/bug24934.js(1,17): error TS2323: Cannot redeclare exported variable 'abc'.
tests/cases/conformance/salsa/bug24934.js(2,20): error TS2323: Cannot redeclare exported variable 'abc'.


==== tests/cases/conformance/salsa/bug24934.js (2 errors) ====
    export function abc(a, b, c) { return 5; }
                    ~~~
!!! error TS2323: Cannot redeclare exported variable 'abc'.
    module.exports = { abc };
                       ~~~
!!! error TS2323: Cannot redeclare exported variable 'abc'.
==== tests/cases/conformance/salsa/use.js (0 errors) ====
    import { abc } from './bug24934';
    abc(1, 2, 3);
    